--- a/childrenapp/colors.css
+++ b/childrenapp/colors.css
@@ -1,30 +1,31 @@
-.grid-numbers{
+.grid-colors{
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto;
     justify-content: space-around;
 }
 
-.number-card{
+.color-card{
     margin: 50px auto;
-    padding: 50px;
     border-radius: 50px;
+    text-align: center;
 }
-.number-card img{
-    width: 100%;
-}
-.number-card:hover{
+
+.color-card:hover{
     box-shadow: 1px 1px 3px gray;
     cursor: pointer;
 }
 
+.color-card img{
+    width: 50%;
+}
 /*---- MEDIA QUERY ----*/
 @media screen and (max-width: 900px){
-    .grid-numbers{
+    .grid-colors{
         grid-template-columns: auto auto;
     }
 }
 @media screen and (max-width: 400px){
-    .grid-numbers{
+    .grid-colors{
         grid-template-columns: auto;
     }
 }
